--- a/trunk/modules/common/pom.xml
+++ b/trunk/modules/common/pom.xml
@@ -13,8 +13,14 @@ C:\java\maven-2.0-beta-1\maven-v4_0_0.xsd">
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <dependency>
+            <groupId>activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
-
+    
+    
     <!-- Build section          -->
     <build>
         <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
