--- a/trunk/modules/feeder/feederconfig/pom.xml
+++ b/trunk/modules/feeder/feederconfig/pom.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-C:\java\maven-2.0-beta-1\maven-v4_0_0.xsd">
-    <parent>
-        <groupId>org.siri</groupId>
-        <artifactId>siri</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  	
+  <parent>
+    <groupId>org.siri</groupId>
+    <artifactId>siri</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>  
     <inceptionYear>2005</inceptionYear>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.siri</groupId>
@@ -15,7 +15,7 @@ C:\java\maven-2.0-beta-1\maven-v4_0_0.xsd">
     <dependencies>
 
 
-        <dependency>
+        <!-- dependency>
             <groupId>jaxb</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>1.5</version>
@@ -39,27 +39,16 @@ C:\java\maven-2.0-beta-1\maven-v4_0_0.xsd">
             <groupId>jaxb</groupId>
             <artifactId>relaxngDatatype</artifactId>
             <version>1.5</version>
-        </dependency>
+        </dependency -->
 
 
+	
 
-        <!--dependency>
-            <groupId>xmlbeans</groupId>
-            <artifactId>xmlbeans-maven-plugin</artifactId>
-            <version>2.0.0</version>
-            <type>plugin</type>
-        </dependency>
-
-        <dependency>
-            <groupId>xmlbeans</groupId>
-            <artifactId>xbean</artifactId>
-            <version>2.0.0</version>
-        </dependency-->
     </dependencies>
 
     <!-- Build section          -->
     <build>
-        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+        <!-- sourceDirectory>${basedir}/src/main/java</sourceDirectory>
         <resources>
             <resource>
                 <directory>${maven.build.dir}/${jaxb.src.outdir}</directory>
@@ -68,7 +57,26 @@ C:\java\maven-2.0-beta-1\maven-v4_0_0.xsd">
                     <include>**/*.ser</include>
                 </includes>
             </resource>
-        </resources>
+        </resources -->
+        
+        <plugins>
+            <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>maven-xmlbeans-plugin</artifactId>
+	        <version>2.0-beta-1</version>
+	        <executions>
+	           <execution>
+	              <goals>
+	                 <goal>xmlbeans</goal>
+	              </goals>
+	           </execution>
+	        </executions>
+	        <inherited>true</inherited>
+	        <configuration>
+	           <schemaDirectory>src/xsd</schemaDirectory>
+	        </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 
