--- a/trunk/modules/common/pom.xml
+++ b/trunk/modules/common/pom.xml
@@ -1,65 +1,49 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <groupId>org.siri</groupId>
+        <artifactId>siri</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
     <groupId>org.siri</groupId>
-    <artifactId>siri</artifactId>
+    <artifactId>common</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-  </parent>  
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.siri</groupId>
-  <artifactId>common</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>Siri common artifact</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>  
-  	<dependency>
-	      <groupId>org.hibernate</groupId>
-	      <artifactId>hibernate</artifactId>
-	      <version>3.0.5</version>
-		<!-- Excluding jars not needed from Hibernate POM.
-		     Also the javax jars needs to be downloaded from 
-		     Sun (or from an Hibernate installation) and installed
-		     into repository for this build to work.
-		-->
-		<exclusions>
-	      	        <exclusion>
-	      	          <groupId>ant</groupId>
-	      	          <artifactId>ant</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>odmg</groupId>
-	      	          <artifactId>odmg</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>c3p0</groupId>
-	      	          <artifactId>c3p0</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>proxool</groupId>
-	      	          <artifactId>proxool</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>opensymphony</groupId>
-	      	          <artifactId>oscache</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>swarmcache</groupId>
-	      	          <artifactId>swarmcache</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>jboss</groupId>
-	      	          <artifactId>jboss-cache</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>javax.security</groupId>
-	      	          <artifactId>jacc</artifactId>
-	      	        </exclusion>
-	      	        <exclusion>
-	      	          <groupId>javax.transaction</groupId>
-	      	          <artifactId>jta</artifactId>
-	      	        </exclusion>
-      		</exclusions>
-    	</dependency>    	
-  </dependencies>
+    <name>Siri common artifact</name>
+    <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.7.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.0.4</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>logkit</groupId>
+                    <artifactId>logkit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>avalon-framework</groupId>
+                    <artifactId>avalon-framework</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
+
+    </dependencies>
+
+
+    
 </project>
