--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,80 +1,110 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <groupId>org.siri</groupId>
+        <artifactId>siri</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
     <groupId>org.siri</groupId>
-    <artifactId>siri</artifactId>
+    <artifactId>domain</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-  </parent>  
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.siri</groupId>
-  <artifactId>domain</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>Siri domain artifact</name>
-  <url>http://maven.apache.org</url>
-  
-  <!-- Put all global dependencies here instead of spreading them out in different modules. -->  
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>  
-    <dependency>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-          <version>1.2.8</version>
-    </dependency>
-    <dependency>
-          <groupId>commons-lang</groupId>
-          <artifactId>commons-lang</artifactId>
-          <version>2.1</version>
-    </dependency>
-    <dependency>
-          <groupId>commons-beanutils</groupId>
-          <artifactId>commons-beanutils</artifactId>
-          <version>1.7.0</version>
-    </dependency>
-    <dependency>
-          <groupId>commons-collections</groupId>
-          <artifactId>commons-collections</artifactId>
-          <version>3.1</version>
-    </dependency>
-    <!-- Dependencies to J2EE spec - using geronimo generated -->
-    <dependency>
-          <groupId>commons-collections</groupId>
-          <artifactId>commons-collections</artifactId>
-          <version>3.1</version>
-    </dependency>
-    <dependency>
-          <groupId>geronimo-spec</groupId>
-          <artifactId>geronimo-spec-jms</artifactId>
-          <version>1.1-rc4</version>
-    </dependency>
-    <dependency>
-          <groupId>geronimo-spec</groupId>
-          <artifactId>geronimo-spec-ejb</artifactId>
-          <version>2.1-rc4</version>
-    </dependency>
-  </dependencies>
-  
-  
-  <dependencyManagement>
-          <dependencies>
+    <name>Siri domain artifact</name>
+    <url>http://maven.apache.org</url>
+    <!-- If you have any internal repository you can put it here. -->
+    <repositories>
+        <repository>
+            <id>maven2</id>
+            <name>Default Maven2 repository</name>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+    </repositories>
+
+    <!-- Put all global dependencies here instead of spreading them out in different modules. -->
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.8</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <!-- Dependencies to J2EE spec - using geronimo generated -->
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>geronimo-spec</groupId>
+            <artifactId>geronimo-spec-jms</artifactId>
+            <version>1.1-rc4</version>
+        </dependency>
+        <dependency>
+            <groupId>geronimo-spec</groupId>
+            <artifactId>geronimo-spec-ejb</artifactId>
+            <version>2.1-rc4</version>
+        </dependency>
+        <dependency>
+            <groupId>springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>1.2.5</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- dependency>
+                               <groupId>springframework</groupId>
+                               <artifactId>spring-mock</artifactId>
+                               <version>1.2.5</version>
+                               <scope>test</scope>
+                               <exclusions>
+                                       <exclusion>
+                                               <groupId>springframework</groupId>
+                                               <artifactId>spring-jdbc</artifactId>
+                                       </exclusion>
+                                       <exclusion>
+                                               <groupId>springframework</groupId>
+                                               <artifactId>spring-web</artifactId>
+                                       </exclusion>
+                               </exclusions>
+                       </dependency-->
+    </dependencies>
+
+
+    <dependencyManagement>
+        <dependencies>
             <dependency>
-   		<groupId>org.hibernate</groupId>
-  	      	<artifactId>hibernate</artifactId>
-	      	<version>3.0.5</version>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate</artifactId>
+                <version>3.0.5</version>
             </dependency>
-          </dependencies>
-  </dependencyManagement>
-  
-  
-  
-  <organization>
-      <name>Capio</name>
-      <url>http://developer.berlios.org/capio</url>
+        </dependencies>
+    </dependencyManagement>
+
+
+
+    <organization>
+        <name>Capio</name>
+        <url>http://developer.berlios.org/capio</url>
     </organization>
     <!--
     distributionManagement>
@@ -90,46 +120,61 @@
       <url>http://svn.berlios.org/</url> 
     </scm
     -->
-  
-  
-  <!-- Put all modules to be built inte this section. -->
-  <modules>
-          <module>modules/domain</module>
-          <module>modules/common</module>
-          <module>modules/feeder/feederconfig</module>
-  </modules>
-  
-  <!-- Need this to set java version using compiler plugin -->
-  <build>
-  	<!-- 
-  	Use defaults    
-  	directory>target</directory>
-  	<outputDirectory>target/classes</outputDirectory>
-  	<finalName>${artifactId}-${version}</finalName>
-  	<testOutputDirectory>target/test-classes</testOutputDirectory>
-  	<sourceDirectory>src/main/java</sourceDirectory>
-  	<scriptSourceDirectory>src/main/scripts</scriptSourceDirectory>
-  	<testSourceDirectory>src/test/java</testSourceDirectory>
-  	<resources>
-  		<resource>
-  		<directory>src/main/resources</directory>
-  		</resource>
-  	</resources>
-  	<testResources>
-  		<testResource>
-  		<directory>src/test/resources</directory>
-  		</testResource>
-  	</testResources 
-  	-->
+
+
+    <!-- Put all modules to be built inte this section. -->
+    <modules>
+        <module>modules/domain</module>
+        <module>modules/common</module>
+        <module>modules/feeder/feederconfig</module>
+    </modules>
+
+    <!-- Need this to set java version using compiler plugin -->
+    <build>
+        <!--
+        Use defaults
+        directory>target</directory>
+        <outputDirectory>target/classes</outputDirectory>
+        <finalName>${artifactId}-${version}</finalName>
+        <testOutputDirectory>target/test-classes</testOutputDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <scriptSourceDirectory>src/main/scripts</scriptSourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <resources>
+            <resource>
+            <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+            <directory>src/test/resources</directory>
+            </testResource>
+        </testResources
+        -->
         <plugins>
-  
-  		<plugin>
-        	<artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>1.5</source>
-                        <target>1.5</target>
-                    </configuration>
-                </plugin>
-          </plugins>
-  </build>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+            <!--plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-war-plugin</artifactId>
+           <configuration>
+           <warSourceDirectory >src/webapp</warSourceDirectory >
+           </configuration>
+       </plugin-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <locales>en,fr</locales>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 </project>
