--- a/trunk/modules/domain/pom.xml
+++ b/trunk/modules/domain/pom.xml
@@ -13,10 +13,15 @@
   <name>Siri domain artifact</name>
   <url>http://maven.apache.org</url>
   <dependencies>  
-  	<dependency>
+	  <dependency>
+	      <groupId>org.siri</groupId>
+	      <artifactId>common</artifactId>
+	      <version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 	      <groupId>org.hibernate</groupId>
 	      <artifactId>hibernate</artifactId>
-	      <!-- version>3.0.5</version Pull the version from the parent--> 
+	      <version>3.0.5</version> <!-- Pull the version from the parent--> 
 		<!-- Excluding jars not needed from Hibernate POM.
 		     Also the javax jars needs to be downloaded from 
 		     Sun (or from an Hibernate installation) and installed
