--- a/trunk/modules/maven-plugin/maven-jacorb-plugin/pom.xml
+++ b/trunk/modules/maven-plugin/maven-jacorb-plugin/pom.xml
@@ -1,54 +1,66 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <project>
-        <modelVersion>4.0.0</modelVersion>
-        <!--parent>
-          <artifactId>mojo</artifactId>
-          <groupId>org.apache.maven.plugins</groupId>
-          <version>1.0-SNAPSHOT</version>
-        </parent-->
+    <parent>
+        <artifactId>maven-plugin-parent</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-castor-plugin</artifactId>
-        <packaging>maven-plugin</packaging>
-        <version>1.0-SNAPSHOT</version>
-        <name>Maven2 Jacorb Plugin</name>
-        <developers>
-            <developer>
-                <id>gepo01</id>
-                <name>Geoges Polyzois</name>
-                <email>gepo01@yahoo.com</email>
-                <url>http://www.ddd.com</url>
-                <organization>NA</organization>
-                <timezone>+1 GMT</timezone>
-            </developer>
-        </developers>
-        <dependencies>
-            <dependency>
-                <groupId>org.apache.maven</groupId>
-                <artifactId>maven-plugin-api</artifactId>
-                <version>2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>3.8.1</version>
-                <scope>test</scope>
-            </dependency>
+        <version>2.0</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jacorb-plugin</artifactId>
+    <packaging>maven-plugin</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>Maven2 Jacorb Plugin</name>
+    <developers>
+        <developer>
+            <id>gepo01</id>
+            <name>Geoges Polyzois</name>
+            <email>gepo01@yahoo.com</email>
+            <url>http://www.ddd.com</url>
+            <organization>NA</organization>
+            <timezone>+1 GMT</timezone>
+        </developer>
+    </developers>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-project</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <!--dependency>
+            <groupId>JacORB</groupId>
+            <artifactId>JacORB</artifactId>
+            <version>2.1_USC1</version>
+        </dependency>
+        <dependency>
+            <groupId>JacORB</groupId>
+            <artifactId>avalon-framework</artifactId>
+            <version>4.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>JacORB</groupId>
+            <artifactId>concurrent</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>JacORB</groupId>
+            <artifactId>logkit</artifactId>
+            <version>1.2</version>
+        </dependency-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
-            <!--dependency>
-                <groupId>castor</groupId>
-                <artifactId>castor</artifactId>
-                <version>0.9.5</version>
-            </dependency>
-            <dependency>
-                <groupId>xerces</groupId>
-                <artifactId>xerces</artifactId>
-                <version>1.4.0</version>
-            </dependency-->
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>1.0</version>
-            </dependency>
-        </dependencies>
-    </project>
+</project>
