--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -114,26 +114,12 @@
 	      	        </exclusion>
       		</exclusions>
     	</dependency>    	
-        <!-- dependency>
-                               <groupId>springframework</groupId>
-                               <artifactId>spring-mock</artifactId>
-                               <version>1.2.5</version>
-                               <scope>test</scope>
-                               <exclusions>
-                                       <exclusion>
-                                               <groupId>springframework</groupId>
-                                               <artifactId>spring-jdbc</artifactId>
-                                       </exclusion>
-                                       <exclusion>
-                                               <groupId>springframework</groupId>
-                                               <artifactId>spring-web</artifactId>
-                                       </exclusion>
-                               </exclusions>
-                       </dependency-->
+        
     </dependencies>
 
 
-    <!-- dependencyManagement>
+    <!-- Is this good or not...
+    dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -146,9 +132,10 @@
 
 
     <organization>
-        <name>Capio</name>
-        <url>http://developer.berlios.org/capio</url>
+        <name>Siri</name>
+        <url>http://developer.berlios.org/siri</url>
     </organization>
+
     <!--
     distributionManagement>
       <repository>
@@ -169,8 +156,8 @@
     <modules>
         <module>modules/domain</module>
         <module>modules/common</module>
-         <module>modules/feeder/feeder</module>
-        <!-- module>modules/feeder/feederconfig</module -->
+        <module>modules/feeder/feeder</module>
+        <module>modules/feeder/feederconfig</module>
     </modules>
 
     <!-- Need this to set java version using compiler plugin -->
