--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -9,11 +9,17 @@
   <url>http://maven.apache.org</url>
     <!-- If you have any internal repository you can put it here. -->
     <repositories>
-        <repository>
+       <repository>
+                <id>maven2</id>
+                <name>Danish Maven2 repository</name>
+                <url>http://mirrors.sunsite.dk/maven2</url>
+                <!--mirrorOf>central</mirrorOf-->
+        </repository>
+        <!--repository>
             <id>maven2</id>
             <name>Default Maven2 repository</name>
             <url>http://repo1.maven.org/maven2</url>
-        </repository>
+        </repository-->
     </repositories>
 
     <!-- Put all global dependencies here instead of spreading them out in different modules. -->
@@ -60,12 +66,7 @@
             <artifactId>geronimo-spec-ejb</artifactId>
             <version>2.1-rc4</version>
         </dependency>
-        <dependency>
-            <groupId>springframework</groupId>
-            <artifactId>spring</artifactId>
-            <version>1.2.5</version>
-            <scope>compile</scope>
-        </dependency>
+
         <dependency>
 	      <groupId>org.hibernate</groupId>
 	      <artifactId>hibernate</artifactId>
