--- a/trunk/modules/domain/src/config/log4j.properties
+++ b/trunk/modules/domain/src/config/log4j.properties
@@ -29,10 +29,10 @@
 !              Truncate from beginning if wider than 10 characters.           !
 !-----------------------------------------------------------------------------!
 
-log4j.appender.rigelpersistence=org.apache.log4j.ConsoleAppender
-log4j.appender.rigelpersistence.Target=System.out
-log4j.appender.rigelpersistence.layout=org.apache.log4j.PatternLayout
-log4j.appender.rigelpersistence.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}: %m%n
+log4j.appender.domain=org.apache.log4j.ConsoleAppender
+log4j.appender.domain.Target=System.out
+log4j.appender.domain.layout=org.apache.log4j.PatternLayout
+log4j.appender.domain.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}: %m%n
 log4j.logger.org.siri.domain.util=debug
 log4j.logger.org.siri=info
 log4j.logger.org.hibernate=warn
