--- a/trunk/modules/domain/pom.xml
+++ b/trunk/modules/domain/pom.xml
@@ -73,4 +73,14 @@
             </exclusions>
         </dependency>
     </dependencies>
+    
+     <build>
+        <testResources>
+            <testResource>
+            <directory>src/test/resources</directory>
+            </testResource>
+        </testResources
+	</build>
+	
+    
 </project>
