--- a/trunk/modules/domain/pom.xml
+++ b/trunk/modules/domain/pom.xml
@@ -12,6 +12,9 @@
     <version>1.0-SNAPSHOT</version>
     <name>Siri domain artifact</name>
     <url>http://maven.apache.org</url>
+    
+    
+    
     <dependencies>
         <dependency>
             <groupId>org.siri</groupId>
@@ -22,6 +25,11 @@
 	    <groupId>hsqldb</groupId>
 	    <artifactId>hsqldb</artifactId>
 	    <version>1.8.0.1</version>
+        </dependency>
+        <dependency>
+		     <groupId>geronimo-spec</groupId>
+		     <artifactId>geronimo-spec-jta</artifactId>
+		     <version>1.0.1B-rc4</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -74,13 +82,34 @@
         </dependency>
     </dependencies>
     
-     <build>
+    <reporting>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+          </plugin>
+    	</plugins>
+    </reporting>
+    
+    <build>
+    	<resources>
+    		<!-- Bring on all mapping files for Hibernate -->
+ 		<resource>
+                	<directory>${basedir}/src/main/java</directory>
+                </resource>
+                 <resource>
+		         <directory>${basedir}/src/config</directory>
+                </resource>
+        </resources>
         <testResources>
-            <testResource>
-            <directory>src/main/javav/*.hbm.xml</directory>
-            </testResource>
-        </testResources
-	</build>
+	        <!-- Bring on log4j.xml to test classes output folder -->
+		<testResource>
+			<directory>${basedir}/src/config</directory>
+		</testResource>
+        </testResources>
+        
+            	
+     </build>
 	
     
 </project>
