--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -5,9 +5,12 @@
     <artifactId>siri</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-  <name>Siri parent project</name>
-  <url>http://maven.apache.org</url>
-    <!-- If you have any internal repository you can put it here. -->
+    <name>Siri parent project</name>
+    <url>http://siri.berlios.de/</url>
+  
+    <!-- 
+    	If you have any internal repository you put it here. 
+    -->
     <repositories>
        <repository>
                 <id>maven2</id>
@@ -22,7 +25,10 @@
         </repository-->
     </repositories>
 
-    <!-- Put all global dependencies here instead of spreading them out in different modules. -->
+    <!-- 
+    	Put all global dependencies here instead of spreading them out in 
+    	different child modules. 
+    -->
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -66,11 +72,7 @@
             <artifactId>geronimo-spec-ejb</artifactId>
             <version>2.1-rc4</version>
         </dependency>
-        <dependency>
-	     <groupId>geronimo-spec</groupId>
-	     <artifactId>geronimo-spec-jta</artifactId>
-	     <version>1.0.1B-rc4</version>
-        </dependency>
+        
 
         <dependency>
 	      <groupId>org.hibernate</groupId>
@@ -120,7 +122,6 @@
 	      	        </exclusion>
       		</exclusions>
     	</dependency>    	
-        
     </dependencies>
 
 
@@ -142,15 +143,26 @@
         <url>http://developer.berlios.org/siri</url>
     </organization>
 
-    <!--
-    distributionManagement>
+    <!-- 
+   	Use mvn deploy to deploy your build artifacts to the
+    	ssh server specified in the repository section. 
+   	Use mvn site-deploy to deploy your site (html) to the
+    	server specified using ssh in the site section.
+    -->
+    <distributionManagement>
       <repository>
         <id>codehaus</id>
         <name>Maven Codehaus Repository</name>
         <url>scp://beaver.codehaus.org/dist</url>
       </repository>
+      <site>
+                <id>website</id>
+                <url>scp://www.mycompany.com/www/docs/project/</url>
+      </site>
     </distributionManagement>
-    <scm>
+
+
+    <!--scm>
       <connection>scm:svn:svn://svn.berlios.org/cargo/scm/siri/trunk</connection>
       <developerConnection>scm:svn:svn://svn.berlios.org/cargo/scm/siri/trunk</developerConnection>
       <url>http://svn.berlios.org/</url> 
@@ -208,7 +220,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <configuration>
-                    <locales>en,fr</locales>
+                    <locales>en</locales>
                 </configuration>
             </plugin>
         </plugins>
