--- a/trunk/modules/domain/pom.xml
+++ b/trunk/modules/domain/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate</artifactId>
-            <version>3.0.5</version>
+            <version>3.1beta3</version>
             <!-- Pull the version from the parent-->
             <!-- Excluding jars not needed from Hibernate POM.
                 Also the javax jars needs to be downloaded from
