--- a/trunk/modules/grouterconfig/.project
+++ b/trunk/modules/grouterconfig/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xmlbinding</name>
+	<name>grouterconfig</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -13,5 +13,14 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>com.tssap.selena.model.modeling_nature</nature>
+		<nature>com.borland.selena.uml14.uml14_nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Suspended Root</name>
+			<type>2</type>
+			<location>SuspendedRootVariable</location>
+		</link>
+	</linkedResources>
 </projectDescription>
