--- a/trunk/modules/grouterconfig/.classpath
+++ b/trunk/modules/grouterconfig/.classpath
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="src" path="target/jaxb-generated"/>
-	<classpathentry kind="src" path="src/test"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/apache-commons"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/apache-xerces"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javawebservicespack-1.5"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/junit"/>
+	<classpathentry kind="var" path="M2_REPO/xmlbeans/xbean/2.0.0/xbean-2.0.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/xmlbeans/xmlbeans-jsr173-api/2.0.0/xmlbeans-jsr173-api-2.0.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/siri/feederconfig/1.0-SNAPSHOT/feederconfig-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
